# ToolWeave

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  samconfig.toml  template.yaml
.github/workflows/: deploy.yml
deploy/: samconfig.toml  template.yaml
docs/: architecture.md  aws-architecture.puml  c4-component.puml  c4-container.puml  c4-context.puml  claude.md
docs/assets/: AWSCommon.puml  C4.puml  C4Component.puml  C4Container.puml  C4Context.puml
examples/: petstore.yaml
src/: index.ts  lambda-entry.ts  requirements.txt
src/Swagger/: tarun-content-team.yaml
src/handlers/: http.ts  lambda.ts
src/integrations/: data-dictionary-client.ts
src/mcp/: server.ts
src/swagger/: data-dictionary.ts  parser.ts  types.ts
src/tools/: executor.ts
src/toolweave/: agent.py  catalog_search.py  data_dictionary_client.py  dynamodb_client.py  endpoint_enricher.py  executor.py  models.py  observatory.py  server.py  swagger_parser.py  swagger_processor.py
