[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolweave"
version = "0.1.0"
description = "FastMCP server bridging OpenAPI/Swagger specs with AI agents via Bedrock, DataDictionary MCP, and mcp-observatory"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.3.0",
    "mcp>=1.6.0",
    "boto3>=1.34.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.2",
    "mcp-observatory>=0.2.1",
    "python-dotenv>=1.0.0",
    "mangum>=0.19.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "moto[dynamodb,s3]>=5.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
toolweave = "toolweave.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
